--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>3.2.4</version>
+		<version>3.3.1</version>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>
@@ -15,12 +15,12 @@
 	<packaging>war</packaging>
 
 	<properties>
-		<mapstruct.version>1.5.5.Final</mapstruct.version>
-		<lombok.version>1.18.30</lombok.version>
+		<mapstruct.version>1.6.0.Beta1</mapstruct.version>
 		<mapstruct_lombok_binding.version>0.2.0</mapstruct_lombok_binding.version>
+		<lombok.version>1.18.30</lombok.version>
 		<mysql.version>8.3.0</mysql.version>
 		<jwt-io.version>0.12.5</jwt-io.version>
-		<java.version>21</java.version>
+		<java.version>22</java.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
@@ -55,6 +55,11 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<!--OAuth2 Resource Server-->
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-oauth2-resource-server</artifactId>
 		</dependency>
 		<!--Lombok-->
 		<dependency>
@@ -126,7 +131,6 @@
 					</annotationProcessorPaths>
 					<compilerArgs>
 						<arg>-Amapstruct.defaultComponentModel=spring</arg>
-						<arg>-Amapstruct.suppressGeneratorTimestamp=true</arg>
 						<arg>-Amapstruct.suppressGeneratorVersionInfoComment=true</arg>
 						<arg>-Amapstruct.verbose=true</arg>
 					</compilerArgs>
