--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
 	<groupId>com.hcv</groupId>
 	<artifactId>Quan-ly-do-an</artifactId>
 	<version>1.0.0</version>
-	<packaging>war</packaging>
+	<packaging>jar</packaging>
 
 	<properties>
 		<mapstruct.version>1.6.0.Beta1</mapstruct.version>
