--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@ target/
 !**/src/test/**/target/
 
 ### IntelliJ IDEA ###
-.idea/
+TTTidea/
 *.iws
 *.iml
 *.ipr
@@ -33,4 +33,4 @@ build/
 
 ### Mac OS ###
 .DS_Store
-/.idea/
+/TTTidea/
